<resources>
    <string name="app_name">Hydration App</string>
    <string name="title_home">Home</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_profile">Profile</string>
    <string name="name">Name:</string>
    <string name="weight">Weight:</string>
    <string name="email">Email:</string>
    <string name="goal">Daily goal progression</string>
    <string name="progression">Latest 7 tracked days</string>
    <string name="drinkCreate">New drink</string>
    <string name="drink_type">Drink type</string>
    <string name="amount">Amount:</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="ml">ml</string>
    <string name="delete">DELETE</string>
    <string name="back">BACK</string>
    <string name="user_goal">Goal:</string>
    <string name="save">Save</string>
    <string name="welcome">"Welcome!"</string>
    <string name="fab">Fab</string>
    <string name="new_water">Water</string>
    <string name="new_coffee">Coffee</string>
    <string name="new_tea">Tea</string>
    <string name="new_alcohol">Alcohol</string>
    <string name="delete_profile">Delete profile</string>
    <string name="add_new">Add new</string>
    <string name="your_profile">Your profile</string>
    <string name="welcome_text">Please register to use the app!</string>
    <string name="welcome_login">Welcome!</string>
    <string name="register">Register</string>
    <string name="email_login">Email</string>
    <string name="weight_login">Weight</string>
    <string name="name_login">Name</string>
    <string name="launcher_icon">launcher_icon</string>
    <string name="goal_profile">Goal</string>
</resources>