<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/welcome_login"
        android:textSize="24sp"
        android:fontFamily="@font/balsamiq_sans"
        android:textColor="@color/blue"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/welcome_text"
        android:textSize="22sp"
        android:fontFamily="@font/balsamiq_sans"
        android:textColor="@color/blue_menu_selected"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_height="72dp"
        android:layout_marginBottom="24dp"
        android:layout_width="wrap_content"
        android:contentDescription="@string/launcher_icon"
        android:src="@mipmap/ic_launcher" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent">

        <EditText
            android:hint="@string/name_login"
            android:id="@+id/etName"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent">

        <EditText
            android:hint="@string/email_login"
            android:id="@+id/etEmail"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent">

        <EditText
            android:hint="@string/weight_login"
            android:id="@+id/etWeight"
            android:inputType="number"
            android:importantForAutofill="no"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:padding="12dp"
        android:text="@string/register" />
</LinearLayout>