<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_gravity="center_horizontal"
    tools:context=".ui.home.AddDrinkFragment">

    <TextView
        android:id="@+id/tvAddNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:fontFamily="@font/balsamiq_sans"
        android:textSize="22sp"
        android:textAllCaps="true"
        android:text="@string/add_new"/>

    <TextView
        android:id="@+id/tvSelected"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fontFamily="@font/balsamiq_sans"
        android:textColor="@color/blue"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvAddNew"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:textSize="24sp"
        tools:hint="@string/new_water"/>

    <LinearLayout
        android:id="@+id/layout_drinks"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintTop_toBottomOf="@+id/tvSelected"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ImageButton
            android:id="@+id/ibWater"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:contentDescription="@string/new_water"
            android:background="@color/blue"
            android:layout_weight="1"
            android:src="@drawable/water"/>
        <ImageButton
            android:id="@+id/ibCoffee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:contentDescription="@string/new_coffee"
            android:background="@color/white"
            android:layout_weight="1"
            android:src="@drawable/coffee"/>
        <ImageButton
            android:id="@+id/ibTea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:contentDescription="@string/new_tea"
            android:background="@color/white"
            android:layout_weight="1"
            android:src="@drawable/tea"/>
        <ImageButton
            android:id="@+id/ibAlcohol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/new_alcohol"
            android:padding="8dp"
            android:background="@color/white"
            android:layout_weight="1"
            android:src="@drawable/alcohol"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/layout_drinks"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/balsamiq_sans"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:gravity="center"
            android:text="200"
            tools:text="200"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/balsamiq_sans"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="16sp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ml"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/layout_amount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btnCreateDrink"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_weight="2"
            android:layout_marginEnd="6dp"
            android:backgroundTint="@color/blue"
            android:text="@string/apply" />

        <Button
            android:id="@+id/btnCancelCreateDrink"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_weight="2"
            android:layout_marginStart="6dp"
            android:backgroundTint="@color/dark_red"
            android:text="@string/cancel" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>